--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -36,7 +36,8 @@ target 'Example' do
     :podspec => "../node_modules/react-native/third-party-podspecs/glog.podspec",
     :inhibit_warnings => true
 
-  pod 'StripeTerminal', '1.0.0-b6'
+  pod 'StripeTerminal', :podspec => 'https://d37ugbyn3rpeym.cloudfront.net/terminal/ios-betas/2.0.0-b5-487f3ad086a3544fb9201bd33d059278.podspec'
+
 
   pod 'RNStripeTerminal', :path => '../node_modules/react-native-stripe-terminal'
 
