author name change

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-native"
   ],
   "author": {
-    "name": "Theo Patt",
-    "email": "theo@theopatt.com"
+    "name": "Allah Nawaz Qadir",
+    "email": "anawaz.qadir@gmail.com"
   },
   "license": "MIT",
   "licenseFilename": "LICENSE",
