--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-stripe-terminal",
+  "name": "react-n-stripe-terminal",
   "title": "React Native Stripe Terminal",
   "version": "1.0.0",
   "description": "React Native Stripe Terminal",
@@ -9,21 +9,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nawaz4225/rn-stripe-terminal.git",
-    "baseUrl": "https://github.com/nawaz4225/rn-stripe-terminal"
+    "url": "git+https://github.com/nawaz4225/react-n-stripe-terminal.git",
+    "baseUrl": "https://github.com/nawaz4225/react-n-stripe-terminal"
   },
   "keywords": [
     "react-native"
   ],
-  "author": {
-    "name": "Allah Nawaz Qadir",
-    "email": "anawaz.qadir@gmail.com"
-  },
+  "author": "Allah Nawaz Qadir <anawaz.qadir@gmail.com>",
   "license": "MIT",
   "licenseFilename": "LICENSE",
-  "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.2.0",
     "react-native": "^0.52.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/nawaz4225/rn-stripe-terminal/issues"
+  },
+  "homepage": "https://github.com/nawaz4225/rn-stripe-terminal#readme"
 }
