--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-n-stripe-terminal",
+  "name": "crowdbotics-react-native-stripe-terminal",
   "title": "React Native Stripe Terminal",
-  "version": "1.0.6",
+  "version": "1.0.0",
   "description": "React Native Stripe Terminal",
   "main": "index.js",
   "scripts": {
