--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -103,7 +103,7 @@ android {
 
     defaultConfig {
         applicationId "com.example"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -139,8 +139,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+//    implementation project(':crowdbotics-react-native-stripe-terminal')
 }
 
 // Run this once to be able to run the application with BUCK
