--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -1,41 +1,29 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+
 
 target 'Example' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
+  config = use_native_modules!
+  use_react_native!(:path => config["../node_modules/react-native"])
+  
+  # Enables Flipper.
+  
+  # Note that if you have use_frameworks! enabled, Flipper will not work and
+  # you should disable these next few lines.
+  use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
+  post_install do |installer|
+    flipper_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+      end
+    end
+  end
 
-  pod 'React',
-    :path => "../node_modules/react-native",
-    :inhibit_warnings => true,
-    :subspecs => [
-      "Core",
-      "ART",
-      "RCTActionSheet",
-      "RCTAnimation",
-      "RCTCameraRoll",
-      "RCTGeolocation",
-      "RCTImage",
-      "RCTNetwork",
-      "RCTText",
-      "RCTVibration",
-      "RCTWebSocket",
-      "DevSupport",
-      "CxxBridge"
-    ]
-  pod 'yoga',
-    :path => "../node_modules/react-native/ReactCommon/yoga",
-    :inhibit_warnings => true
-  pod 'DoubleConversion',
-    :podspec => "../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec",
-    :inhibit_warnings => true
-  pod 'Folly',
-    :podspec => "../node_modules/react-native/third-party-podspecs/Folly.podspec",
-    :inhibit_warnings => true
-  pod 'glog',
-    :podspec => "../node_modules/react-native/third-party-podspecs/glog.podspec",
-    :inhibit_warnings => true
-
-  pod 'RNStripeTerminal', :path => '../node_modules/react-n-stripe-terminal'
+  pod 'RNStripeTerminal', :path => '../node_modules/crowdbotics-react-native-stripe-terminal'
 
 end
